# Rust-Dashboard

./: .gitignore  Cargo.toml  INVESTIGATION_TRACKER.md  PRODUCTION_READINESS.md  README.md
.github/workflows/: ci.yml  release.yml  rust.yml
.portfolio/: architecture.md  og-preview.html  qa.md  stack.md
docs/plans/: 2026-03-07-production-readiness.md  2026-03-09-taskbar-dev-design.md  2026-03-09-taskbar-dev-implementation.md
examples/: basic_usage.rs
src/: config.rs  error.rs  lib.rs  main.rs  system.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  panels.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_config.rs  test_export.rs  test_process_actions.rs  test_system.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: log.ts  types.ts  utils.ts  windowManager.ts
ui/src/lib/components/: ContextMenu.svelte  CpuPanel.svelte  DetachedHeader.svelte  DiskPanel.svelte  ErrorBanner.svelte  ExportButtons.svelte  HistoryChart.svelte  KillConfirmDialog.svelte  MemoryPanel.svelte  NetworkPanel.svelte  PerCpuCores.svelte  ProcessRow.svelte  ProcessTable.svelte  ProgressBar.svelte  Sidebar.svelte  Skeleton.svelte  StatusIndicator.svelte  TopBar.svelte  TrayPopup.svelte
ui/src/lib/stores/: config.ts  processes.ts  system.ts
ui/src/routes/: +layout.svelte  +page.svelte
