[package]
name = "rust-dashboard"
version = "2.0.0"
edition = "2021"
description = "Rust Dashboard - System monitoring with Tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rust_dashboard_lib = { path = ".." }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
